Fix Facebook like button alignment

--- a/_static/quamotion.css
+++ b/_static/quamotion.css
@@ -66,3 +66,7 @@ li.current, a.current {
   padding-top: 31px;
   text-align: right;
 }
+
+.fb-like.fb_iframe_widget {
+    vertical-align: top;
+}
